Bug fixes, tested to okay results

--- a/notebooks/LatSim1TestTune.ipynb
+++ b/notebooks/LatSim1TestTune.ipynb
@@ -44,7 +44,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(66, 1, 34716)\n",
+      "(66, 34716)\n",
       "(66,)\n"
      ]
     }
@@ -58,11 +58,366 @@
     "keys = list(fmriData['groupsNormalDiagMap'].keys())\n",
     "y = [fmriData['groupsNormalDiagMap'][key] for key in keys]\n",
     "y = np.array(y).astype('int')\n",
-    "X = [fmriData['FC-slim'][fmriData['subjNum2IdxMap'][key]] for key in keys]\n",
-    "X = np.stack(X)\n",
-    "X = np.expand_dims(X, 1)\n",
-    "print(X.shape)\n",
+    "x = [fmriData['FC-slim'][fmriData['subjNum2IdxMap'][key]] for key in keys]\n",
+    "x = np.stack(x)\n",
+    "print(x.shape)\n",
     "print(y.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "id": "1b449171",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor(0.5000, device='cuda:0')\n",
+      "tensor(0.5000, device='cuda:0')\n",
+      "tensor(0.3333, device='cuda:0')\n",
+      "tensor(0.6667, device='cuda:0')\n",
+      "tensor(0.3333, device='cuda:0')\n",
+      "tensor(0.5000, device='cuda:0')\n",
+      "tensor(0.6667, device='cuda:0')\n",
+      "tensor(0.3333, device='cuda:0')\n",
+      "tensor(0.6667, device='cuda:0')\n",
+      "tensor(0.8333, device='cuda:0')\n",
+      "tensor(0.6667, device='cuda:0')\n",
+      "tensor(0.3333, device='cuda:0')\n",
+      "tensor(0.6667, device='cuda:0')\n",
+      "tensor(0.5000, device='cuda:0')\n",
+      "tensor(0.6667, device='cuda:0')\n",
+      "tensor(0.5000, device='cuda:0')\n",
+      "tensor(0.3333, device='cuda:0')\n",
+      "tensor(0.3333, device='cuda:0')\n",
+      "tensor(0.5000, device='cuda:0')\n",
+      "tensor(0.6667, device='cuda:0')\n",
+      "tensor(0.5000, device='cuda:0')\n",
+      "tensor(0.6667, device='cuda:0')\n",
+      "tensor(0.5000, device='cuda:0')\n",
+      "tensor(0.5000, device='cuda:0')\n",
+      "tensor(0.6667, device='cuda:0')\n",
+      "tensor(0.5000, device='cuda:0')\n",
+      "tensor(0.3333, device='cuda:0')\n",
+      "tensor(0.3333, device='cuda:0')\n",
+      "tensor(0.8333, device='cuda:0')\n",
+      "tensor(0.5000, device='cuda:0')\n",
+      "tensor(0.3333, device='cuda:0')\n",
+      "tensor(0.6667, device='cuda:0')\n",
+      "tensor(0.6667, device='cuda:0')\n",
+      "tensor(0.8333, device='cuda:0')\n",
+      "tensor(0.8333, device='cuda:0')\n",
+      "tensor(1., device='cuda:0')\n",
+      "tensor(1., device='cuda:0')\n",
+      "tensor(0.5000, device='cuda:0')\n",
+      "tensor(0.6667, device='cuda:0')\n",
+      "tensor(1., device='cuda:0')\n",
+      "tensor(0.6667, device='cuda:0')\n",
+      "tensor(0.3333, device='cuda:0')\n",
+      "tensor(0.8333, device='cuda:0')\n",
+      "tensor(0.3333, device='cuda:0')\n",
+      "tensor(0.6667, device='cuda:0')\n",
+      "tensor(0.8333, device='cuda:0')\n",
+      "tensor(1., device='cuda:0')\n",
+      "tensor(0.5000, device='cuda:0')\n",
+      "tensor(0.6667, device='cuda:0')\n",
+      "tensor(0.6667, device='cuda:0')\n",
+      "tensor(0.3333, device='cuda:0')\n",
+      "tensor(0.6667, device='cuda:0')\n",
+      "tensor(1., device='cuda:0')\n",
+      "tensor(0.5000, device='cuda:0')\n",
+      "tensor(0.1667, device='cuda:0')\n",
+      "tensor(0.5000, device='cuda:0')\n",
+      "tensor(0.1667, device='cuda:0')\n",
+      "tensor(0.3333, device='cuda:0')\n",
+      "tensor(0.6667, device='cuda:0')\n",
+      "tensor(0.6667, device='cuda:0')\n",
+      "tensor(0.6667, device='cuda:0')\n",
+      "tensor(0.5000, device='cuda:0')\n",
+      "tensor(0.3333, device='cuda:0')\n",
+      "tensor(0.5000, device='cuda:0')\n",
+      "tensor(0.1667, device='cuda:0')\n",
+      "tensor(0.1667, device='cuda:0')\n",
+      "tensor(0.8333, device='cuda:0')\n",
+      "tensor(0.3333, device='cuda:0')\n",
+      "tensor(0.1667, device='cuda:0')\n",
+      "tensor(0.5000, device='cuda:0')\n",
+      "tensor(0.6667, device='cuda:0')\n",
+      "tensor(0.6667, device='cuda:0')\n",
+      "tensor(0.6667, device='cuda:0')\n",
+      "tensor(0.5000, device='cuda:0')\n",
+      "tensor(0.6667, device='cuda:0')\n",
+      "tensor(1., device='cuda:0')\n",
+      "tensor(0.1667, device='cuda:0')\n",
+      "tensor(0.6667, device='cuda:0')\n",
+      "tensor(0.6667, device='cuda:0')\n",
+      "tensor(0.6667, device='cuda:0')\n",
+      "tensor(0.6667, device='cuda:0')\n",
+      "tensor(0.3333, device='cuda:0')\n",
+      "tensor(0.1667, device='cuda:0')\n",
+      "tensor(0.6667, device='cuda:0')\n",
+      "tensor(0.3333, device='cuda:0')\n",
+      "tensor(0.5000, device='cuda:0')\n",
+      "tensor(0.8333, device='cuda:0')\n",
+      "tensor(0.6667, device='cuda:0')\n",
+      "tensor(0.6667, device='cuda:0')\n",
+      "tensor(0.5000, device='cuda:0')\n",
+      "tensor(0.8333, device='cuda:0')\n",
+      "tensor(0.5000, device='cuda:0')\n",
+      "tensor(0.6667, device='cuda:0')\n",
+      "tensor(0.6667, device='cuda:0')\n",
+      "tensor(0.8333, device='cuda:0')\n",
+      "tensor(0.8333, device='cuda:0')\n",
+      "tensor(0.6667, device='cuda:0')\n",
+      "tensor(0.5000, device='cuda:0')\n",
+      "tensor(0.5000, device='cuda:0')\n",
+      "tensor(0.6667, device='cuda:0')\n",
+      "tensor(0.6667, device='cuda:0')\n",
+      "tensor(0.5000, device='cuda:0')\n",
+      "tensor(0.6667, device='cuda:0')\n",
+      "tensor(0.8333, device='cuda:0')\n",
+      "tensor(0.6667, device='cuda:0')\n",
+      "tensor(0.3333, device='cuda:0')\n",
+      "tensor(0.8333, device='cuda:0')\n",
+      "tensor(0.5000, device='cuda:0')\n",
+      "tensor(0.5000, device='cuda:0')\n",
+      "tensor(0.6667, device='cuda:0')\n",
+      "tensor(0.6667, device='cuda:0')\n",
+      "tensor(0.6667, device='cuda:0')\n",
+      "tensor(0.6667, device='cuda:0')\n",
+      "tensor(0.5000, device='cuda:0')\n",
+      "tensor(0.6667, device='cuda:0')\n",
+      "tensor(0.5000, device='cuda:0')\n",
+      "tensor(0.6667, device='cuda:0')\n",
+      "tensor(0.3333, device='cuda:0')\n",
+      "tensor(0.6667, device='cuda:0')\n",
+      "tensor(0.8333, device='cuda:0')\n",
+      "tensor(0.8333, device='cuda:0')\n",
+      "tensor(1., device='cuda:0')\n",
+      "tensor(0.6667, device='cuda:0')\n",
+      "tensor(0.6667, device='cuda:0')\n",
+      "tensor(0., device='cuda:0')\n",
+      "tensor(0.6667, device='cuda:0')\n",
+      "tensor(0.6667, device='cuda:0')\n",
+      "tensor(0.5000, device='cuda:0')\n",
+      "tensor(0.6667, device='cuda:0')\n",
+      "tensor(0.6667, device='cuda:0')\n",
+      "tensor(0.6667, device='cuda:0')\n",
+      "tensor(0.3333, device='cuda:0')\n",
+      "tensor(0.3333, device='cuda:0')\n",
+      "tensor(0.6667, device='cuda:0')\n",
+      "tensor(0.3333, device='cuda:0')\n",
+      "tensor(0.3333, device='cuda:0')\n",
+      "tensor(0.5000, device='cuda:0')\n",
+      "tensor(0.3333, device='cuda:0')\n",
+      "tensor(0.6667, device='cuda:0')\n",
+      "tensor(0.6667, device='cuda:0')\n",
+      "tensor(0.5000, device='cuda:0')\n",
+      "tensor(0.8333, device='cuda:0')\n",
+      "tensor(0.5000, device='cuda:0')\n",
+      "tensor(0.6667, device='cuda:0')\n",
+      "tensor(0.5000, device='cuda:0')\n",
+      "tensor(0.5000, device='cuda:0')\n",
+      "tensor(0.6667, device='cuda:0')\n",
+      "tensor(0.3333, device='cuda:0')\n",
+      "tensor(0.5000, device='cuda:0')\n",
+      "tensor(0.6667, device='cuda:0')\n",
+      "tensor(1., device='cuda:0')\n",
+      "tensor(0.5000, device='cuda:0')\n",
+      "tensor(0.8333, device='cuda:0')\n",
+      "tensor(0.5000, device='cuda:0')\n",
+      "tensor(0.6667, device='cuda:0')\n",
+      "tensor(0.6667, device='cuda:0')\n",
+      "tensor(0.6667, device='cuda:0')\n",
+      "tensor(0.5000, device='cuda:0')\n",
+      "tensor(0.6667, device='cuda:0')\n",
+      "tensor(0.5000, device='cuda:0')\n",
+      "tensor(0.1667, device='cuda:0')\n",
+      "tensor(0.6667, device='cuda:0')\n",
+      "tensor(0.5000, device='cuda:0')\n",
+      "tensor(0.5000, device='cuda:0')\n",
+      "tensor(0.8333, device='cuda:0')\n",
+      "tensor(0.3333, device='cuda:0')\n",
+      "tensor(0.5000, device='cuda:0')\n",
+      "tensor(0.3333, device='cuda:0')\n",
+      "tensor(0.6667, device='cuda:0')\n",
+      "tensor(0.5000, device='cuda:0')\n",
+      "tensor(0.8333, device='cuda:0')\n",
+      "tensor(0.5000, device='cuda:0')\n",
+      "tensor(0.8333, device='cuda:0')\n",
+      "tensor(0.6667, device='cuda:0')\n",
+      "tensor(0.8333, device='cuda:0')\n",
+      "tensor(0.6667, device='cuda:0')\n",
+      "tensor(0.5000, device='cuda:0')\n",
+      "tensor(0.6667, device='cuda:0')\n",
+      "tensor(0.6667, device='cuda:0')\n",
+      "tensor(0.5000, device='cuda:0')\n",
+      "tensor(0.6667, device='cuda:0')\n",
+      "tensor(0.6667, device='cuda:0')\n",
+      "tensor(0.6667, device='cuda:0')\n",
+      "tensor(0.5000, device='cuda:0')\n",
+      "tensor(0.6667, device='cuda:0')\n",
+      "tensor(0.6667, device='cuda:0')\n",
+      "tensor(0.5000, device='cuda:0')\n",
+      "tensor(0.5000, device='cuda:0')\n",
+      "tensor(0.3333, device='cuda:0')\n",
+      "tensor(0.5000, device='cuda:0')\n",
+      "tensor(0.8333, device='cuda:0')\n",
+      "tensor(0.6667, device='cuda:0')\n",
+      "tensor(0.8333, device='cuda:0')\n",
+      "tensor(0.8333, device='cuda:0')\n",
+      "tensor(0.5000, device='cuda:0')\n",
+      "tensor(0.5000, device='cuda:0')\n",
+      "tensor(0.3333, device='cuda:0')\n",
+      "tensor(0.5000, device='cuda:0')\n",
+      "tensor(0.6667, device='cuda:0')\n",
+      "tensor(0.6667, device='cuda:0')\n",
+      "tensor(0.3333, device='cuda:0')\n",
+      "tensor(0.6667, device='cuda:0')\n",
+      "tensor(0.3333, device='cuda:0')\n",
+      "tensor(0.5000, device='cuda:0')\n",
+      "tensor(0.3333, device='cuda:0')\n",
+      "tensor(0.5000, device='cuda:0')\n",
+      "tensor(0.5000, device='cuda:0')\n",
+      "tensor(0.3333, device='cuda:0')\n",
+      "tensor(0.3333, device='cuda:0')\n",
+      "tensor(0.3333, device='cuda:0')\n",
+      "tensor(0.6667, device='cuda:0')\n",
+      "tensor(0.1667, device='cuda:0')\n",
+      "tensor(0.8333, device='cuda:0')\n",
+      "tensor(0.6667, device='cuda:0')\n",
+      "tensor(0.6667, device='cuda:0')\n",
+      "tensor(0.3333, device='cuda:0')\n",
+      "tensor(0.6667, device='cuda:0')\n",
+      "tensor(0.8333, device='cuda:0')\n",
+      "tensor(0.6667, device='cuda:0')\n",
+      "tensor(0.5000, device='cuda:0')\n",
+      "tensor(0.5000, device='cuda:0')\n",
+      "tensor(0.3333, device='cuda:0')\n",
+      "tensor(0.5000, device='cuda:0')\n",
+      "tensor(0.5000, device='cuda:0')\n",
+      "tensor(0.8333, device='cuda:0')\n",
+      "tensor(0.3333, device='cuda:0')\n",
+      "tensor(0.6667, device='cuda:0')\n",
+      "tensor(0.5000, device='cuda:0')\n",
+      "tensor(0.6667, device='cuda:0')\n",
+      "tensor(0.6667, device='cuda:0')\n",
+      "tensor(0.6667, device='cuda:0')\n",
+      "tensor(0.5000, device='cuda:0')\n",
+      "tensor(0.8333, device='cuda:0')\n",
+      "tensor(0.6667, device='cuda:0')\n",
+      "tensor(0.5000, device='cuda:0')\n",
+      "tensor(0.6667, device='cuda:0')\n",
+      "tensor(0.6667, device='cuda:0')\n",
+      "tensor(0.5000, device='cuda:0')\n",
+      "tensor(0.6667, device='cuda:0')\n",
+      "tensor(0.5000, device='cuda:0')\n",
+      "tensor(0.3333, device='cuda:0')\n",
+      "tensor(0.6667, device='cuda:0')\n",
+      "tensor(1., device='cuda:0')\n",
+      "tensor(0.1667, device='cuda:0')\n",
+      "tensor(0.3333, device='cuda:0')\n",
+      "tensor(0.3333, device='cuda:0')\n",
+      "tensor(0.3333, device='cuda:0')\n",
+      "tensor(0.3333, device='cuda:0')\n",
+      "tensor(0.5000, device='cuda:0')\n",
+      "tensor(0.3333, device='cuda:0')\n",
+      "tensor(0.3333, device='cuda:0')\n",
+      "tensor(0.6667, device='cuda:0')\n",
+      "tensor(0.5000, device='cuda:0')\n",
+      "tensor(0.5000, device='cuda:0')\n",
+      "tensor(0.8333, device='cuda:0')\n",
+      "tensor(0.5000, device='cuda:0')\n",
+      "tensor(0.5000, device='cuda:0')\n",
+      "tensor(0.5000, device='cuda:0')\n",
+      "tensor(0.8333, device='cuda:0')\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor(0.6667, device='cuda:0')\n",
+      "tensor(1., device='cuda:0')\n",
+      "tensor(0.6667, device='cuda:0')\n",
+      "tensor(0.5000, device='cuda:0')\n",
+      "tensor(0.8333, device='cuda:0')\n",
+      "tensor(0.5000, device='cuda:0')\n",
+      "tensor(0.3333, device='cuda:0')\n",
+      "tensor(0.1667, device='cuda:0')\n",
+      "tensor(0.6667, device='cuda:0')\n",
+      "tensor(0.5000, device='cuda:0')\n",
+      "tensor(0.5000, device='cuda:0')\n",
+      "tensor(0.3333, device='cuda:0')\n",
+      "tensor(0.5000, device='cuda:0')\n",
+      "tensor(0.8333, device='cuda:0')\n",
+      "tensor(0.3333, device='cuda:0')\n",
+      "tensor(0.3333, device='cuda:0')\n",
+      "tensor(0.5000, device='cuda:0')\n",
+      "tensor(0.5000, device='cuda:0')\n",
+      "tensor(0.6667, device='cuda:0')\n",
+      "tensor(0.5000, device='cuda:0')\n",
+      "tensor(0.6667, device='cuda:0')\n",
+      "tensor(0.3333, device='cuda:0')\n",
+      "tensor(0.1667, device='cuda:0')\n",
+      "tensor(0.5000, device='cuda:0')\n",
+      "tensor(1., device='cuda:0')\n",
+      "tensor(0.6667, device='cuda:0')\n",
+      "tensor(0.5000, device='cuda:0')\n",
+      "tensor(0.5000, device='cuda:0')\n",
+      "tensor(0.5000, device='cuda:0')\n",
+      "tensor(0.5000, device='cuda:0')\n",
+      "tensor(0.6667, device='cuda:0')\n",
+      "tensor(0.5000, device='cuda:0')\n",
+      "tensor(0.5000, device='cuda:0')\n",
+      "tensor(0.6667, device='cuda:0')\n",
+      "tensor(0.6667, device='cuda:0')\n",
+      "tensor(0.5000, device='cuda:0')\n",
+      "tensor(0.6667, device='cuda:0')\n",
+      "tensor(0.5000, device='cuda:0')\n",
+      "tensor(0.3333, device='cuda:0')\n",
+      "tensor(0.5000, device='cuda:0')\n",
+      "tensor(0.6667, device='cuda:0')\n",
+      "0.5677777907252312\n"
+     ]
+    }
+   ],
+   "source": [
+    "import sys\n",
+    "\n",
+    "if '..' not in sys.path:\n",
+    "    sys.path.append('..')\n",
+    "\n",
+    "from latsim import LatSim\n",
+    "from latsim import train_sim_ce\n",
+    "import torch \n",
+    "import torch.nn as nn\n",
+    "import torch.nn.functional as F\n",
+    "\n",
+    "aacc = []\n",
+    "\n",
+    "for i in range(300):\n",
+    "    yy = torch.from_numpy(y).cuda()\n",
+    "    idcs = torch.randperm(66)\n",
+    "    yy = yy[idcs]\n",
+    "    yy = F.one_hot(yy).float()\n",
+    "    yytr = yy[:60]\n",
+    "    yyt = yy[60:]\n",
+    "    xx = torch.from_numpy(x).float().cuda()\n",
+    "    xx = xx[idcs]\n",
+    "    xxtr = xx[:60]\n",
+    "    xxt = xx[60:]\n",
+    "    sim = LatSim(xx.shape[1])\n",
+    "    train_sim_ce(sim, xxtr, yytr, 0.33, lr=1e-4, nepochs=1000, pperiod=100, verbose=False)\n",
+    "    yhat = sim(xxtr, yytr, xxt)\n",
+    "    yhat = torch.argmax(yhat, dim=1)\n",
+    "    acc = torch.sum(yhat == torch.argmax(yyt, dim=1))/6\n",
+    "    print(acc)\n",
+    "    aacc.append(float(acc))\n",
+    "    \n",
+    "print(sum(aacc)/300)"
    ]
   },
   {
@@ -299,7 +654,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.5"
+   "version": "3.10.8"
   }
  },
  "nbformat": 4,
