--- a/notebooks/LatSim1Example.ipynb
+++ b/notebooks/LatSim1Example.ipynb
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "1b449171",
    "metadata": {},
    "outputs": [
@@ -76,29 +76,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.5294117647058824\n",
-      "0.7058823529411765\n",
-      "0.5294117647058824\n",
-      "0.47058823529411764\n",
-      "0.6470588235294118\n",
-      "0.5882352941176471\n",
-      "0.5294117647058824\n",
-      "0.6470588235294118\n",
-      "0.5294117647058824\n",
-      "0.47058823529411764\n",
-      "0.5294117647058824\n",
-      "0.7058823529411765\n",
-      "0.6470588235294118\n",
-      "0.47058823529411764\n",
-      "0.7647058823529411\n",
-      "0.7647058823529411\n",
-      "0.47058823529411764\n",
-      "0.47058823529411764\n",
-      "0.5882352941176471\n",
-      "0.7058823529411765\n",
-      "---\n",
-      "0.588235294117647\n",
-      "0.10017286097603766\n"
+      "0.7142857142857143\n",
+      "0.5714285714285714\n",
+      "0.5714285714285714\n",
+      "0.5714285714285714\n",
+      "0.2857142857142857\n",
+      "0.42857142857142855\n",
+      "0.8571428571428571\n",
+      "0.42857142857142855\n",
+      "0.7142857142857143\n",
+      "0.5714285714285714\n",
+      "0.8571428571428571\n",
+      "0.2857142857142857\n"
      ]
     }
    ],
@@ -109,12 +98,14 @@
     "    sys.path.append('..')\n",
     "\n",
     "from latsim import LatSimClf\n",
+    "from sklearn.linear_model import LogisticRegression\n",
     "\n",
     "accs = []\n",
     "\n",
-    "for i in range(20):\n",
-    "    xtr, xt, ytr, yt = train_test_split(x, y, stratify=y, train_size=0.75)\n",
-    "    clf = LatSimClf().fit(xtr,ytr,ld=1)\n",
+    "for i in range(30):\n",
+    "    xtr, xt, ytr, yt = train_test_split(x, y, stratify=y, train_size=0.9)\n",
+    "#     clf = LatSimClf().fit(xtr,ytr,ld=1)\n",
+    "    clf = LogisticRegression(C=0.1).fit(xtr,ytr)\n",
     "    yhat = clf.predict(xt)\n",
     "    acc = np.sum(yhat == yt)/len(yhat)\n",
     "    accs.append(acc)\n",
