Add comparison with Logistic Regression

--- a/notebooks/LatSim1Example.ipynb
+++ b/notebooks/LatSim1Example.ipynb
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "1b449171",
    "metadata": {},
    "outputs": [
@@ -76,18 +76,39 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "0.5714285714285714\n",
+      "0.42857142857142855\n",
+      "0.42857142857142855\n",
+      "0.5714285714285714\n",
       "0.7142857142857143\n",
-      "0.5714285714285714\n",
-      "0.5714285714285714\n",
-      "0.5714285714285714\n",
+      "0.8571428571428571\n",
       "0.2857142857142857\n",
-      "0.42857142857142855\n",
-      "0.8571428571428571\n",
-      "0.42857142857142855\n",
+      "0.5714285714285714\n",
+      "0.5714285714285714\n",
       "0.7142857142857143\n",
+      "0.14285714285714285\n",
+      "0.5714285714285714\n",
+      "0.5714285714285714\n",
+      "0.7142857142857143\n",
+      "0.42857142857142855\n",
+      "0.42857142857142855\n",
+      "0.2857142857142857\n",
       "0.5714285714285714\n",
       "0.8571428571428571\n",
-      "0.2857142857142857\n"
+      "0.7142857142857143\n",
+      "0.5714285714285714\n",
+      "0.7142857142857143\n",
+      "0.7142857142857143\n",
+      "0.8571428571428571\n",
+      "0.42857142857142855\n",
+      "0.8571428571428571\n",
+      "0.8571428571428571\n",
+      "0.8571428571428571\n",
+      "0.5714285714285714\n",
+      "0.7142857142857143\n",
+      "---\n",
+      "0.6047619047619048\n",
+      "0.18693129929895735\n"
      ]
     }
    ],
@@ -104,8 +125,8 @@
     "\n",
     "for i in range(30):\n",
     "    xtr, xt, ytr, yt = train_test_split(x, y, stratify=y, train_size=0.9)\n",
-    "#     clf = LatSimClf().fit(xtr,ytr,ld=1)\n",
-    "    clf = LogisticRegression(C=0.1).fit(xtr,ytr)\n",
+    "    clf = LatSimClf().fit(xtr,ytr,ld=1)\n",
+    "#     clf = LogisticRegression(C=10).fit(xtr,ytr)\n",
     "    yhat = clf.predict(xt)\n",
     "    acc = np.sum(yhat == yt)/len(yhat)\n",
     "    accs.append(acc)\n",
