Grid search cv compatibility: get_params need params parameter

--- a/notebooks/LatSim1Example.ipynb
+++ b/notebooks/LatSim1Example.ipynb
@@ -55,7 +55,6 @@
     "# Package fMRI data into data matrix and response variables\n",
     "\n",
     "import numpy as np\n",
-    "from sklearn.model_selection import train_test_split\n",
     "\n",
     "keys = list(fmriData['groupsNormalDiagMap'].keys())\n",
     "y = [fmriData['groupsNormalDiagMap'][key] for key in keys]\n",
@@ -76,39 +75,39 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.5\n",
       "0.42857142857142855\n",
-      "0.5714285714285714\n",
-      "0.7857142857142857\n",
+      "0.5\n",
+      "0.5\n",
+      "0.6428571428571429\n",
+      "0.42857142857142855\n",
       "0.7142857142857143\n",
-      "0.6428571428571429\n",
-      "0.6428571428571429\n",
-      "0.42857142857142855\n",
-      "0.8571428571428571\n",
-      "0.5714285714285714\n",
-      "0.6428571428571429\n",
-      "0.42857142857142855\n",
-      "0.5714285714285714\n",
       "0.5\n",
+      "0.42857142857142855\n",
+      "0.5714285714285714\n",
       "0.35714285714285715\n",
       "0.5714285714285714\n",
-      "0.42857142857142855\n",
+      "0.7142857142857143\n",
+      "0.7142857142857143\n",
+      "0.7857142857142857\n",
+      "0.5714285714285714\n",
       "0.7142857142857143\n",
       "0.5\n",
       "0.7142857142857143\n",
       "0.6428571428571429\n",
-      "0.5714285714285714\n",
-      "0.5714285714285714\n",
-      "0.5714285714285714\n",
+      "0.5\n",
       "0.6428571428571429\n",
+      "0.5714285714285714\n",
       "0.7142857142857143\n",
+      "0.42857142857142855\n",
       "0.6428571428571429\n",
+      "0.7857142857142857\n",
       "0.6428571428571429\n",
-      "0.6428571428571429\n",
-      "0.6428571428571429\n",
+      "0.5714285714285714\n",
+      "0.35714285714285715\n",
+      "0.5714285714285714\n",
       "---\n",
-      "0.5952380952380951\n",
-      "0.11268723396380224\n"
+      "0.580952380952381\n",
+      "0.12056179905878253\n"
      ]
     }
    ],
@@ -120,6 +119,7 @@
     "\n",
     "from latsim import LatSimClf\n",
     "from sklearn.linear_model import LogisticRegression\n",
+    "from sklearn.model_selection import train_test_split\n",
     "\n",
     "accs = []\n",
     "\n",
@@ -135,6 +135,66 @@
     "print('---')\n",
     "print(np.mean(accs))\n",
     "print(np.std(accs))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "ce308e36",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'mean_fit_time': array([0.1927206 , 0.07455053, 0.0749681 , 0.07243319]),\n",
+       " 'std_fit_time': array([0.02293737, 0.0130821 , 0.00277826, 0.00271856]),\n",
+       " 'mean_score_time': array([0.00213256, 0.00136862, 0.00130243, 0.00110683]),\n",
+       " 'std_score_time': array([7.38107264e-05, 1.32361492e-04, 1.03211114e-04, 1.14268789e-04]),\n",
+       " 'param_ld': masked_array(data=[1, 1, 10, 10],\n",
+       "              mask=[False, False, False, False],\n",
+       "        fill_value='?',\n",
+       "             dtype=object),\n",
+       " 'param_stop': masked_array(data=[0, 0.1, 0, 0.1],\n",
+       "              mask=[False, False, False, False],\n",
+       "        fill_value='?',\n",
+       "             dtype=object),\n",
+       " 'params': [{'ld': 1, 'stop': 0},\n",
+       "  {'ld': 1, 'stop': 0.1},\n",
+       "  {'ld': 10, 'stop': 0},\n",
+       "  {'ld': 10, 'stop': 0.1}],\n",
+       " 'split0_test_score': array([0.45454545, 0.45454545, 0.45454545, 0.54545455]),\n",
+       " 'split1_test_score': array([0.36363636, 0.54545455, 0.36363636, 0.27272727]),\n",
+       " 'split2_test_score': array([0.7, 0.7, 0.6, 0.5]),\n",
+       " 'split3_test_score': array([0.7, 0.5, 0.7, 0.6]),\n",
+       " 'split4_test_score': array([0.8, 0.8, 0.7, 0.7]),\n",
+       " 'mean_test_score': array([0.60363636, 0.6       , 0.56363636, 0.52363636]),\n",
+       " 'std_test_score': array([0.16550449, 0.12971679, 0.13447172, 0.14207436]),\n",
+       " 'rank_test_score': array([1, 2, 3, 4], dtype=int32)}"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import sys\n",
+    "\n",
+    "if '..' not in sys.path:\n",
+    "    sys.path.append('..')\n",
+    "\n",
+    "from latsim import LatSimClf\n",
+    "from sklearn.model_selection import GridSearchCV\n",
+    "\n",
+    "# parameters = LatSimClf.get_default_distributions()\n",
+    "parameters = {'ld': [1, 10], 'stop': [0, 0.1]}\n",
+    "sim = LatSimClf()\n",
+    "clf = GridSearchCV(sim, parameters, scoring='accuracy')\n",
+    "\n",
+    "xtr, xt, ytr, yt = train_test_split(x, y, stratify=y, train_size=0.8)\n",
+    "clf.fit(xtr, ytr)\n",
+    "\n",
+    "clf.cv_results_"
    ]
   },
   {
@@ -162,7 +222,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.2"
+   "version": "3.10.9"
   }
  },
  "nbformat": 4,
