--- a/notebooks/LatSim1Example.ipynb
+++ b/notebooks/LatSim1Example.ipynb
@@ -139,17 +139,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "ce308e36",
+   "execution_count": 5,
+   "id": "b3cef3f3",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'mean_fit_time': array([0.1927206 , 0.07455053, 0.0749681 , 0.07243319]),\n",
-       " 'std_fit_time': array([0.02293737, 0.0130821 , 0.00277826, 0.00271856]),\n",
-       " 'mean_score_time': array([0.00213256, 0.00136862, 0.00130243, 0.00110683]),\n",
-       " 'std_score_time': array([7.38107264e-05, 1.32361492e-04, 1.03211114e-04, 1.14268789e-04]),\n",
+       "{'mean_fit_time': array([0.07243547, 0.07250857, 0.07289786, 0.07535329]),\n",
+       " 'std_fit_time': array([0.00698142, 0.00773355, 0.00201003, 0.00799013]),\n",
+       " 'mean_score_time': array([0.00115542, 0.00122228, 0.00122108, 0.00100236]),\n",
+       " 'std_score_time': array([1.61300937e-04, 6.49111122e-05, 6.42021171e-05, 1.48389195e-04]),\n",
        " 'param_ld': masked_array(data=[1, 1, 10, 10],\n",
        "              mask=[False, False, False, False],\n",
        "        fill_value='?',\n",
@@ -162,17 +162,17 @@
        "  {'ld': 1, 'stop': 0.1},\n",
        "  {'ld': 10, 'stop': 0},\n",
        "  {'ld': 10, 'stop': 0.1}],\n",
-       " 'split0_test_score': array([0.45454545, 0.45454545, 0.45454545, 0.54545455]),\n",
-       " 'split1_test_score': array([0.36363636, 0.54545455, 0.36363636, 0.27272727]),\n",
-       " 'split2_test_score': array([0.7, 0.7, 0.6, 0.5]),\n",
-       " 'split3_test_score': array([0.7, 0.5, 0.7, 0.6]),\n",
-       " 'split4_test_score': array([0.8, 0.8, 0.7, 0.7]),\n",
-       " 'mean_test_score': array([0.60363636, 0.6       , 0.56363636, 0.52363636]),\n",
-       " 'std_test_score': array([0.16550449, 0.12971679, 0.13447172, 0.14207436]),\n",
-       " 'rank_test_score': array([1, 2, 3, 4], dtype=int32)}"
+       " 'split0_test_score': array([0.45454545, 0.45454545, 0.36363636, 0.54545455]),\n",
+       " 'split1_test_score': array([0.18181818, 0.54545455, 0.45454545, 0.81818182]),\n",
+       " 'split2_test_score': array([0.5, 0.3, 0.3, 0.4]),\n",
+       " 'split3_test_score': array([0.6, 0.5, 0.5, 0.3]),\n",
+       " 'split4_test_score': array([0.5, 0.4, 0.4, 0.5]),\n",
+       " 'mean_test_score': array([0.44727273, 0.44      , 0.40363636, 0.51272727]),\n",
+       " 'std_test_score': array([0.14099997, 0.08500851, 0.06961524, 0.17464013]),\n",
+       " 'rank_test_score': array([2, 3, 4, 1], dtype=int32)}"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -185,6 +185,7 @@
     "\n",
     "from latsim import LatSimClf\n",
     "from sklearn.model_selection import GridSearchCV\n",
+    "from sklearn.model_selection import train_test_split\n",
     "\n",
     "# parameters = LatSimClf.get_default_distributions()\n",
     "parameters = {'ld': [1, 10], 'stop': [0, 0.1]}\n",
