Updated fibromyalgia data

--- a/notebooks/LatSim1Example.ipynb
+++ b/notebooks/LatSim1Example.ipynb
@@ -2,17 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "f5ca5533",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['FC-slim', 'subjNum2IdxMap', 'subjIdx2NumMap', 'groupsNormalDiagMap']"
+       "['subs', 'fibromyalgia', 'fibromyalgia_score', 'rest', 'epr']"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -20,7 +20,6 @@
    "source": [
     "'''\n",
     "Load fMRI data\n",
-    "You must first run 'python getdata.py' in the LatentSimilarity directory to get the data\n",
     "The data is from: https://openneuro.org/datasets/ds004144/versions/1.0.1\n",
     "We have 66 subjects, 33 of who have fibromyalgia and 33 of who are controls\n",
     "fMRI is upper triangle of 264x264 functional connectivity based on Power atlas\n",
@@ -28,17 +27,17 @@
     "\n",
     "import pickle\n",
     "\n",
-    "fmriData = None\n",
+    "data = None\n",
     "\n",
-    "with open('../data/fmri-FC-slim.pkl', 'rb') as f:\n",
-    "    fmriData = pickle.load(f)\n",
+    "with open('../data/fibromyalgia-data.pkl', 'rb') as f:\n",
+    "    data = pickle.load(f)\n",
     "    \n",
-    "list(fmriData.keys())"
+    "list(data.keys())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "id": "eebeb84a",
    "metadata": {},
    "outputs": [
@@ -46,8 +45,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(66, 34716)\n",
-      "(66,)\n"
+      "(131, 34716)\n",
+      "(131,)\n"
      ]
     }
    ],
@@ -56,18 +55,24 @@
     "\n",
     "import numpy as np\n",
     "\n",
-    "keys = list(fmriData['groupsNormalDiagMap'].keys())\n",
-    "y = [fmriData['groupsNormalDiagMap'][key] for key in keys]\n",
-    "y = np.array(y).astype('int')\n",
-    "x = [fmriData['FC-slim'][fmriData['subjNum2IdxMap'][key]] for key in keys]\n",
+    "x = []\n",
+    "y = []\n",
+    "\n",
+    "for task in ['rest', 'epr']:\n",
+    "    for k,v in data[task].items():\n",
+    "        x.append(v)\n",
+    "        y.append(int(data['fibromyalgia'][k]))\n",
+    "    \n",
     "x = np.stack(x)\n",
+    "y = np.array(y)\n",
+    "    \n",
     "print(x.shape)\n",
     "print(y.shape)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 23,
    "id": "1b449171",
    "metadata": {},
    "outputs": [
@@ -75,43 +80,46 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.42857142857142855\n",
-      "0.5\n",
-      "0.5\n",
-      "0.6428571428571429\n",
-      "0.42857142857142855\n",
-      "0.7142857142857143\n",
-      "0.5\n",
-      "0.42857142857142855\n",
-      "0.5714285714285714\n",
-      "0.35714285714285715\n",
-      "0.5714285714285714\n",
-      "0.7142857142857143\n",
-      "0.7142857142857143\n",
-      "0.7857142857142857\n",
-      "0.5714285714285714\n",
-      "0.7142857142857143\n",
-      "0.5\n",
-      "0.7142857142857143\n",
-      "0.6428571428571429\n",
-      "0.5\n",
-      "0.6428571428571429\n",
-      "0.5714285714285714\n",
-      "0.7142857142857143\n",
-      "0.42857142857142855\n",
-      "0.6428571428571429\n",
-      "0.7857142857142857\n",
-      "0.6428571428571429\n",
-      "0.5714285714285714\n",
-      "0.35714285714285715\n",
-      "0.5714285714285714\n",
+      "0.6666666666666666\n",
+      "0.8148148148148148\n",
+      "0.9259259259259259\n",
+      "0.7037037037037037\n",
+      "0.7777777777777778\n",
+      "0.7037037037037037\n",
+      "0.6666666666666666\n",
+      "0.8888888888888888\n",
+      "0.7037037037037037\n",
+      "0.6666666666666666\n",
+      "0.7777777777777778\n",
+      "0.7407407407407407\n",
+      "0.7777777777777778\n",
+      "0.5925925925925926\n",
+      "0.7777777777777778\n",
+      "0.7407407407407407\n",
+      "0.6666666666666666\n",
+      "0.6666666666666666\n",
+      "0.7407407407407407\n",
+      "0.7407407407407407\n",
+      "0.7407407407407407\n",
+      "0.7407407407407407\n",
+      "0.8148148148148148\n",
+      "0.7407407407407407\n",
+      "0.7037037037037037\n",
+      "0.8148148148148148\n",
+      "0.8148148148148148\n",
+      "0.6666666666666666\n",
+      "0.7407407407407407\n",
+      "0.7777777777777778\n",
       "---\n",
-      "0.580952380952381\n",
-      "0.12056179905878253\n"
+      "0.7432098765432098\n",
+      "0.06957532248694011\n"
      ]
     }
    ],
    "source": [
+    "# We should see similar results for LatSim and LogisticRegression\n",
+    "# Except LatSim is much faster\n",
+    "\n",
     "import sys\n",
     "\n",
     "if '..' not in sys.path:\n",
@@ -121,14 +129,17 @@
     "from sklearn.linear_model import LogisticRegression\n",
     "from sklearn.model_selection import train_test_split\n",
     "\n",
+    "def rmse(yhat, y):\n",
+    "    return np.mean((yhat-y)**2)**0.5\n",
+    "\n",
     "accs = []\n",
     "\n",
     "for i in range(30):\n",
-    "    xtr, xt, ytr, yt = train_test_split(x, y, stratify=y, train_size=0.8)\n",
-    "    clf = LatSimClf().fit(xtr,ytr,ld=1)\n",
-    "#     clf = LogisticRegression(C=10).fit(xtr,ytr)\n",
+    "    xtr, xt, ytr, yt = train_test_split(x, y, train_size=0.8)\n",
+    "    clf = LatSimClf().fit(xtr,ytr)\n",
+    "#     clf = LogisticRegression(C=1).fit(xtr,ytr)\n",
     "    yhat = clf.predict(xt)\n",
-    "    acc = np.sum(yhat == yt)/len(yhat)\n",
+    "    acc = np.mean(yhat == yt)\n",
     "    accs.append(acc)\n",
     "    print(acc)\n",
     "    \n",
@@ -139,17 +150,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 13,
    "id": "b3cef3f3",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'mean_fit_time': array([0.07243547, 0.07250857, 0.07289786, 0.07535329]),\n",
-       " 'std_fit_time': array([0.00698142, 0.00773355, 0.00201003, 0.00799013]),\n",
-       " 'mean_score_time': array([0.00115542, 0.00122228, 0.00122108, 0.00100236]),\n",
-       " 'std_score_time': array([1.61300937e-04, 6.49111122e-05, 6.42021171e-05, 1.48389195e-04]),\n",
+       "{'mean_fit_time': array([0.09296627, 0.06823435, 0.08515639, 0.08539343]),\n",
+       " 'std_fit_time': array([0.01422698, 0.00032864, 0.00120074, 0.00217892]),\n",
+       " 'mean_score_time': array([0.00234475, 0.00198679, 0.00194292, 0.00179815]),\n",
+       " 'std_score_time': array([3.28873471e-04, 4.73764534e-05, 5.63714299e-05, 1.12559833e-04]),\n",
        " 'param_ld': masked_array(data=[1, 1, 10, 10],\n",
        "              mask=[False, False, False, False],\n",
        "        fill_value='?',\n",
@@ -162,17 +173,17 @@
        "  {'ld': 1, 'stop': 0.1},\n",
        "  {'ld': 10, 'stop': 0},\n",
        "  {'ld': 10, 'stop': 0.1}],\n",
-       " 'split0_test_score': array([0.45454545, 0.45454545, 0.36363636, 0.54545455]),\n",
-       " 'split1_test_score': array([0.18181818, 0.54545455, 0.45454545, 0.81818182]),\n",
-       " 'split2_test_score': array([0.5, 0.3, 0.3, 0.4]),\n",
-       " 'split3_test_score': array([0.6, 0.5, 0.5, 0.3]),\n",
-       " 'split4_test_score': array([0.5, 0.4, 0.4, 0.5]),\n",
-       " 'mean_test_score': array([0.44727273, 0.44      , 0.40363636, 0.51272727]),\n",
-       " 'std_test_score': array([0.14099997, 0.08500851, 0.06961524, 0.17464013]),\n",
-       " 'rank_test_score': array([2, 3, 4, 1], dtype=int32)}"
+       " 'split0_test_score': array([0.85714286, 0.76190476, 0.85714286, 0.85714286]),\n",
+       " 'split1_test_score': array([0.66666667, 0.66666667, 0.71428571, 0.66666667]),\n",
+       " 'split2_test_score': array([0.61904762, 0.66666667, 0.61904762, 0.66666667]),\n",
+       " 'split3_test_score': array([0.57142857, 0.57142857, 0.61904762, 0.61904762]),\n",
+       " 'split4_test_score': array([0.9 , 0.9 , 0.85, 0.95]),\n",
+       " 'mean_test_score': array([0.72285714, 0.71333333, 0.73190476, 0.75190476]),\n",
+       " 'std_test_score': array([0.13135954, 0.11108208, 0.1052758 , 0.12845144]),\n",
+       " 'rank_test_score': array([3, 4, 2, 1], dtype=int32)}"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -223,7 +234,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.9"
+   "version": "3.11.3"
   }
  },
  "nbformat": 4,
